# MahjongQT

./: CMakeLists.txt  Judge.cpp  Judge.h  Judge.ui  Mahjong.cpp  Mahjong.h  MahjongQT.cpp  MahjongQT.h  MahjongQT.qrc  MahjongQT.ui  README.md  Tiles.cpp  Tiles.h  main.cpp  resource.h
x64/: CMakeLists.txt
x64/Debug/: CMakeLists.txt
x64/Debug/moc/: moc_Judge.cpp  moc_MahjongQT.cpp
x64/Debug/rcc/: qrc_MahjongQT.cpp
x64/Debug/uic/: CMakeLists.txt  ui_Judge.h  ui_MahjongQT.h
